--- a/index.html
+++ b/index.html
@@ -5,3 +5,18 @@
     <p>My first paragraph.</p>
   </body>
 </html>
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>My First Heading</h1>
+    <p>My first paragraph.</p>
+    
+    <div>
+      <audio controls>
+          <source src="Output 1-2.mp3" type="audio/mpeg">
+          Your browser does not support the audio tag.
+      </audio>
+    </div>
+    
+  </body>
+</html>
