--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <h1>This is my first website!</h1>
+    <p>Sic 'em Bears</p>
 
     <div>
       <audio controls>
@@ -13,6 +13,7 @@
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5jH2RSfxVEQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+<p>Here are the synths that I used.<p>
   </div>
   <iframe src="https://scratch.mit.edu/projects/361869825/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
