--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5jH2RSfxVEQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 <p>Here are the synths that I used.<p>
+  <ul>
+    <li>ES E<li>
+    <li>ES1<li>
+    <li>Sculpture<li>
+    <li>RetroSyn<li>
+    <li>EVOC PS<li>
+    <ul>
   </div>
   <iframe src="https://scratch.mit.edu/projects/361869825/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
