--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </div>
 <p>Here are the synths that I used.<p>
   <ul>
-    <li>ES E<li>
-    <li>ES1<li>
-    <li>Sculpture<li>
-    <li>RetroSyn<li>
-    <li>EVOC PS<li>
-    <ul>
+    <li>ES E</li>
+    <li>ES1</li>
+    <li>Sculpture</li>
+    <li>RetroSyn</li>
+    <li>EVOC PS</li>
+    </ul>
   </div>
   <iframe src="https://scratch.mit.edu/projects/361869825/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
