--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body>
+  <body style=background-color:#666699>
     <h1>This is my first website!</h1>
     <p>Sic 'em Bears</p>
 
