--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style=background-color:#154734>
-    <h1>This is my first website!</h1>
+    <h1 style=text-color:#FFB81C>This is my first website!</h1>
     <p>Sic 'em Bears</p>
 
     <div>
