--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body style=background-color:#154734>
     <h1 style=color:#FFB81C>This is my first website!</h1>
-    <p>Sic 'em Bears</p>
+    <p style=color:#FFB81C>Sic 'em Bears</p>
 
     <div>
       <audio controls>
@@ -13,8 +13,8 @@
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5jH2RSfxVEQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-<p>Here are the synths that I used.<p>
-  <ul>
+<p style=color:#FFB81C>Here are the synths that I used.<p>
+  <ul style=color:#FFB81C>
     <li>ES E = subtractive synthesis</li>
     <li>ES1 = subtractive synthesis</li>
     <li>Sculpture = component modeling</li>
