--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <source src="Output 1-2.mp3" type="audio/mpeg">
           Your browser does not support the audio tag.
       </audio>
-      <object data=”/pdf/Go With God by Stanley Hauerwas.pdf" type=”application/pdf” width=”100%” height=”100%”>
+      <object data=”Go With God by Stanley Hauerwas.pdf" type=”application/pdf” width=”100%” height=”100%”>
     </div>
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5jH2RSfxVEQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
